# models/ApiResponse.go
@@ -30,6 +30,11 @@ type APINoteGetSuccessResponse struct {
 	Detail NoteResponse `json:"detail"`
 }
 
+type APINoteUpdateSuccessResponse struct {
+	Code int `json:"code"`
+	Msg string `json:"msg"`
+	Detail string `json:"detail"`
+}
 
 type APINoteFailed struct {
 	Code   int    `json:"code"`
